fix: improve pixel perfect for the form page on mobile

--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -46,7 +46,7 @@
 }
 
 .footer__socials {
-  margin: 0 0 28px 10px;
+  margin: 0 0 28px 8px;
 
   @media (min-width: @tablet) {
     margin: 3px 0 0 5px;
