--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -14,6 +14,10 @@
   }
 
   &--narrow {
+    @media (max-width: (@tablet - 1px)) {
+      padding-bottom: 34px;
+    }
+
     @media (min-width: @tablet) {
       margin-bottom: 48px;
       padding: 0;
@@ -44,8 +48,18 @@
   }
 
   &--left {
+    @media (max-width: (@tablet - 1px)) {
+      padding-bottom: 39px;
+    }
+
     @media (min-width: @tablet) {
       border-right: 1px solid #dbdbdb;
+    }
+  }
+
+  &:last-child {
+    @media (max-width: (@tablet - 1px)) {
+      padding-bottom: 15px;
     }
   }
 }
@@ -154,6 +168,10 @@
 
 .form__item {
   margin: 0 0 16px;
+
+  &:last-child {
+    margin: 0;
+  }
 }
 
 .form__label {
