--- a/source/less/blocks/intro.less
+++ b/source/less/blocks/intro.less
@@ -2,7 +2,7 @@
   padding: 90px 20px 86px;
   box-sizing: border-box;
   width: 100%;
-  background: url("../img/intro/intro-triangle-1.svg") bottom no-repeat,
+  background: url("../img/intro/intro-triangle-1.svg") center 100.1% no-repeat,
     url("../img/intro/intro-background@1x.jpg") bottom/auto 100% no-repeat,
     #5496bd;
 
@@ -22,8 +22,8 @@
 
   &--secondary {
     padding: 52px 45px 67px;
-    background-size: auto, 1200px auto;
-    background-position: bottom, 50% 80%;
+    background-size: auto, 902px auto;
+    background-position: bottom, 50% 100%;
 
     @media (min-width: @tablet) {
       padding: 100px 45px 120px;
